--- a/Lab1b/Syntax.in
+++ b/Lab1b/Syntax.in
@@ -34,6 +34,7 @@ IFSTMT := "if" CONDOP COMPOUNDSTMT {"else"  COMPOUNDSTMT };
 
 FORSTMT := "for" [CONDOP | (INITSTMT; CONDOP; UNARYOP | ASSIGNSTMT)] COMPOUNDSTMT;
 
+OUTSTMT := "Print" "(" EXPR ")"
 
 (* types *)
 TYPE := PRIMITIVETYPE | ARRAYTYPE;
