--- a/Lab2/go/Syntax.in
+++ b/Lab2/go/Syntax.in
@@ -22,7 +22,10 @@ SIMPLESTMT = UNARYOP
 	| BINARYOP 
 	| DECLSTMT
 	| ASSIGNSTMT 
-	| INITSTMT;
+	| INITSTMT
+  | PRINTSTMT;
+
+PRINTSTMT = "print(" EXPR ")" 
 
 DECLSTMT = "var" IDENTIFIER TYPE;
 
